--- a/.github/workflows/deloy.yml
+++ b/.github/workflows/deloy.yml
@@ -26,14 +26,14 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'  # Changed from '18' to '20'
         cache: 'npm'
         cache-dependency-path: './food-app/package-lock.json'
     
     - name: Install dependencies
       run: |
         cd food-app
-        npm ci
+        npm install  # Changed from 'npm ci' to 'npm install'
     
     - name: Build for GitHub Pages
       run: |
