--- a/.github/workflows/deloy.yml
+++ b/.github/workflows/deloy.yml
@@ -3,37 +3,33 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ dev ]
-  pull_request:
-    branches: [ dev ]
 
 permissions:
-  contents: read
+  contents: write 
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'  # Changed from '18' to '20'
+        node-version: '20'
         cache: 'npm'
         cache-dependency-path: './food-app/package-lock.json'
     
     - name: Install dependencies
       run: |
         cd food-app
-        npm install  # Changed from 'npm ci' to 'npm install'
+        npm install
     
     - name: Build for GitHub Pages
       run: |
@@ -43,21 +39,13 @@ jobs:
         NODE_ENV: production
         GITHUB_PAGES: true
     
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
-    
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
+    - name: Deploy to gh-pages branch
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        path: './food-app/dist'
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./food-app/dist
+        publish_branch: gh-pages
+        force_orphan: true
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        commit_message: 'Deploy to GitHub Pages from dev branch'
