--- a/food-app/package.json
+++ b/food-app/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "build:gh-pages": "GITHUB_PAGES=true vite build",
-    "deploy:gh-pages": "npm run build:gh-pages && gh-pages -d dist"
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
