--- a/food-app/vercel.json
+++ b/food-app/vercel.json
@@ -15,6 +15,18 @@
       "dest": "/assets/$1"
     },
     {
+      "src": "/bg/(.*)",
+      "dest": "/bg/$1"
+    },
+    {
+      "src": "/public/(.*)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
