--- a/.github/workflows/deloy.yml
+++ b/.github/workflows/deloy.yml
@@ -10,23 +10,44 @@ permissions:
   id-token: write
 
 jobs:
+# Test
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install dependencies
+        run: |
+          cd food-app
+          npm install
+      - name: Run tests
+        run: |
+          cd food-app
+          npm run test
+
+# Build and Deploy
   build-and-deploy:
+    needs: test
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout
+    - name: Checkout dự án
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Setup Node.js
+    - name: Cài đặt NodeJS
       uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
         cache-dependency-path: './food-app/package-lock.json'
     
-    - name: Install dependencies
+    - name: Cài đặt các dependencies
       run: |
         cd food-app
         npm install
