--- a/food-app/package.json
+++ b/food-app/package.json
@@ -54,9 +54,10 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.1.1",
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.6",
     "vite": "^7.0.4",
-    "gh-pages": "^6.1.1"
+    "vitest": "^3.2.4"
   }
 }
